[package]
name = "react-neon-ssr"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "react_neon_ssr"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
neon-runtime = "0.1.22"
lazy_static = "1.0"
maplit = "1.0"
regex = "0.2"
